<resources>
    <string name="version">v1.2.7</string>
    <string name="app_name">APlayer</string>
    <string name="tab_song">Song</string>
    <string name="tab_album">Album</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_playlist">Playlist</string>
    <string name="tab_folder">Folder</string>
    <string name="drawer_song">Library</string>
    <string name="drawer_recently">Recently</string>
    <string name="drawer_folder">Folder</string>
    <string name="drawer_setting">Settings</string>
    <string name="from_aplayer">From APlayer</string>
    <string name="about">About APlayer</string>
    <string name="model_random">Shuffle</string>
    <string name="model_repeat">Repeat</string>
    <string name="model_normal">Loop</string>
    <string name="unknown_song">Unknown song</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="unknown_album">Unknown album</string>
    <string name="eq_initial_failed">Equalizer initialization failed</string>
    <string name="use_eq">Use equalizer</string>
    <string name="plz_earphone">Please plug in headphones</string>
    <string name="back">Return</string>
    <string name="feedback">APlayer opinion and feedback</string>
    <string name="my_favorite">My favorite</string>
    <string name="list_is_empty">List is empty</string>
    <string name="folder">Folder</string>
    <string name="recently">Recently</string>
    <string name="continue_play">Resume</string>
    <string name="pause_play">Pause</string>
    <string name="no_song">No song</string>
    <string name="share_error">Share failed</string>
    <string name="share_success">Share success</string>
    <string name="share_cancel">Share cancel</string>
    <string name="plz_input_sharecontent">Please input the content of share</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_playlist">Create playlist</string>
    <string name="create">Create</string>
    <string name="input_playlist_name">Please input the name of playlist</string>
    <string name="song_lose_effect">The song is not available</string>
    <string name="add_playlist_success">Create playlist success</string>
    <string name="add_playlist_error">Create playlist failed</string>
    <string name="playlist_already_exist">The playlist already exists</string>
    <string name="add_error">Add failed</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_song_playlist_success">Add %1$d songs into %2$s</string>
    <string name="delete_multi_song">Remove %d songs</string>
    <string name="add_song_playqueue_success">Add %1$d songs into playing queue </string>
    <string name="add_song_playlist_error">Add songs to playlist failed</string>
    <string name="load_playlist_error">Load playlist failed</string>
    <string name="confirm_delete_from_playlist_or_library">Confirm to remove from %s?</string>
    <string name="delete_success">Remove success</string>
    <string name="delete_error">Remove failed</string>
    <string name="set_ringtone_success">Set as ringtone success</string>
    <string name="set_ringtone_error">Set as ringtone failed</string>
    <string name="set_success">Apply success</string>
    <string name="plz_set_correct_time">Please set the correct time</string>
    <string name="cancel_success">Cancel success</string>
    <string name="play_random">shuffle all(%d)</string>
    <string name="scan_tip">The audio file that is larger than this setting will appear in the song library</string>
    <string name="search_hint">Search song artist album</string>
    <string name="no_search_result">No result</string>
    <string name="create_playlist">Create playlist...</string>
    <string name="use_system_color">Use the system background color</string>
    <string name="use_black_color">Use the black background color</string>
    <string name="play_queue">Playing queue(%d)</string>
    <string name="choose_song">Choose song</string>
    <string name="choose_no_song">No songs were selected</string>
    <string name="set_album_cover_error">Set album cover failed</string>
    <string name="set_artist_cover_error">Set artist cover failed</string>
    <string name="set_playlist_cover_error">Set playlist cover failed</string>
    <string name="new_folder">New folder</string>
    <string name="choose_folder">Choose </string>
    <string name="setting_success">Set success</string>
    <string name="setting_error">Set failed</string>
    <string name="search_error">Search failed</string>
    <string name="song_not_empty">The name of the song cannot be empty</string>
    <string name="save_success">Save Success</string>
    <string name="save_error">Save failed</string>
    <string name="save_error_arg">Save failed: %s</string>
    <string name="arg_illegal">Parameter illegal: %d</string>
    <string name="send_success">Sent successfully.Thanks to your feedback!</string>
    <string name="send_error">Sent failed: %s</string>
    <string name="screenshot_save_at">The screenshot has been saved to %s</string>
    <string name="not_install_weibo">You haven\'t installed Weibo </string>
    <string name="create_dir_error">Create folder failed</string>
    <string name="need_permission">App needs necessary permissions</string>
    <string name="play_now">Playing: %s</string>
    <string name="default_lrc_path">Default behavior is to scan all lyric files</string>
    <string name="lrc_tip">%s</string>
    <string name="cache_size">%1$2.2f MB</string>
    <string name="confirm_clear_cache">Confirm to clear cache?</string>
    <string name="mylove_cant_edit">My favorite is not editable</string>
    <string name="error">Error</string>
    <string name="share_to">Share to</string>
    <string name="qq">QQ</string>
    <string name="weibo">Weibo</string>
    <string name="wechat">Wechat</string>
    <string name="circlefriend">Moments</string>
    <string name="record_share">Share as poster</string>
    <string name="share">Share</string>
    <string name="timer">Sleep with music</string>
    <string name="as_default">Set as default</string>
    <string name="close">Close</string>
    <string name="timer_info_1">"Sleep Timer" 时间设为默认</string>
    <string name="timer_info_2">"Sleep Timer" 时间设为默认后，下次点击定时停止按钮后，将直接按之前设置好的时间开始计时。\n\n想要更改“定时停止”的时间，点击两次定时停止按钮即可进入设置页面。</string>
    <string name="input_feedback_content">Please input the feedback</string>
    <string name="playing">Now playing</string>
    <string name="set_filter_size">Set the size of filter</string>
    <string name="delete">Remove</string>
    <string name="ring">Ringtone</string>
    <string name="join">Add</string>
    <string name="update_error">Update error: %s</string>
    <string name="update_ignore">This version has been ignored for update</string>
    <string name="no_update">Current version is newest</string>
    <string name="search">Search</string>
    <string name="timer_close">Sleep timer</string>
    <string name="feedback_contact_hint">Please enter your contact information</string>
    <string name="lrc_choose">Choose the source of the lyric</string>
    <string name="song_detail">Song detail</string>
    <string name="song_edit">Tag editor</string>
    <string name="common">Common</string>
    <string name="lrc">Lyric</string>
    <string name="music_filter">Filter</string>
    <string name="lrc_scan">Scanning-path</string>
    <string name="lockscreen_show">LockScreen</string>
    <string name="manual_scan">Manual scan</string>
    <string name="lrc_priority">Priority of lyric search</string>
    <string name="lrc_priority_tip">Config priority of lyric search(long press and drag to sort)</string>
    <string name="navigation_color">Colored navigation bar</string>
    <string name="navigation_is_show">Whether colored navigation bar</string>
    <string name="shake">Shake</string>
    <string name="shake_tip">Shake to change song</string>
    <string name="color">Colors</string>
    <string name="primary_color">Primary color</string>
    <string name="primary_color_tip">Allow yourself to choose colors that you love</string>
    <string name="notify_bg_color">Background color</string>
    <string name="notify_bg_color_info">Background color of notification</string>
    <string name="other">Other</string>
    <string name="eq_setting">Equalizer</string>
    <string name="feedback_info">Opinion and feedback</string>
    <string name="about_info">About</string>
    <string name="check_update">Check for update</string>
    <string name="clear_cache">Clear cache</string>
    <string name="support_develop">Support development</string>
    <string name="choose">Choose</string>
    <string name="donate_tip">Your support is to make app better</string>
    <string name="jump_alipay_account">Jump to Alipay</string>
    <string name="already_copy">It has been copied to clipboard </string>
    <string name="confirm_delete_playlist">Whether to remove the selected playlist?</string>
    <string name="confirm_delete_from_playlist">Whether to remove from playlist?</string>
    <string name="confirm_delete_from_library">Whether to remove from library?</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="eq">Equilizer</string>
    <string name="collect">Add to my favorite</string>
    <string name="only_lollopop">Only support Android 5.0 and above</string>
    <string name="aplayer_lockscreen">APlayer LockScreen</string>
    <string name="system_lockscreen">System LockScreen</string>
    <string name="aplayer_lockscreen_tip">Uses the current songs album cover as lockscreen wallpaper,the style depends on APlayer</string>
    <string name="system_lockscreen_tip">Uses the current songs album cover as lockscreen wallpaper,the style depends on your system</string>
    <string name="lockscreen_off_tip">Lockscreen will\'t show album cover(some features will be unavailable)</string>
    <string name="choose_or_close_lockscreen">Whether lockscreen will show the album cover</string>
    <string name="cant_play_this_sont">Unable to play this song</string>
    <string name="illegal_arg">Parameters error</string>
    <string name="song_count">%d songs</string>
    <string name="song_count_1">%d songs</string>
    <string name="song_count_2">%1$s    %2$d songs</string>
    <string name="searching">Searching</string>
    <string name="no_lrc">No lyric</string>
    <string name="song_path">File path:</string>
    <string name="song_name">File name:</string>
    <string name="file_size">Size:</string>
    <string name="format">Format:</string>
    <string name="length">Length:</string>
    <string name="bitrate">Bitrate:</string>
    <string name="sample_rate">SampleRate:</string>
    <string name="please_input_song_name">Please input song name</string>
    <string name="please_input_album">Please input album</string>
    <string name="please_input_artist">Please input artist</string>
    <string name="please_input_year">Please input year</string>
    <string name="please_input_genre">Please input genre</string>
    <string name="sort_order">Sort</string>
    <string name="album">Album</string>
    <string name="album_desc">Album desc</string>
    <string name="title">Title</string>
    <string name="title_desc">Title desc</string>
    <string name="display_title">File name</string>
    <string name="display_title_desc">File name desc</string>
    <string name="artist">Artist</string>
    <string name="artist_desc">Artist desc</string>
    <string name="date">Date</string>
    <string name="date_desc">Date desc</string>
    <string name="name">Title</string>
    <string name="name_desc">Title desc</string>
    <string name="create_time">Create time </string>
    <string name="lyric">Lyric</string>
    <string name="track_number">Track Number</string>
    <string name="please_input_track_number">Please input track number</string>
    <string name="speed">Play speed</string>
</resources>