<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_order"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_order"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_order_playlist_name"
                    android:title="@string/name" />
                <item
                    android:id="@+id/action_sort_order_playlist_name_desc"
                    android:title="@string/name_desc" />
                <item
                    android:id="@+id/action_sort_order_playlist_date"
                    android:title="@string/create_time" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/ic_timer_white_24dp"
        android:orderInCategory="80"
        android:title="@string/timer_close"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="90"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

</menu>