<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d56_size">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="@dimen/d70_size"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="?attr/background_rect_ripple"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/dark_text_color_primary"
            android:textSize="@dimen/s14_size" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_song"
            android:textColor="@color/dark_text_color_primary"
            android:textSize="@dimen/s16_size" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="@dimen/d70_size"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/background_rect_ripple"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/dark_text_color_primary"
            android:textSize="@dimen/s14_size" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/d8_size"
        android:background="?attr/divider_color" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</LinearLayout>